Add HasTransformAnimationWithForwardsOrBothFillMode in style

When a transform animation has animation-fill-mode being 'forward' or
'both', the element should be a containing block even if the animation
has finished.

This CL added HasTransformAnimationWithForwardsOrBothFillMode in
computed style. We check whether an animation is transform animation
and has 'forward' or 'both' fill-mode. If the condition is true, we
set this bit true.

Bug: 764783
Change-Id: Ie4c4280bbeca5ce79b7fc60e299dce306283589a
Reviewed-on: https://chromium-review.googlesource.com/c/1066630
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Xida Chen <xidachen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602554}
Former-commit-id: ee27dd97add2ac408f863f49b9b7ec5bef307fc3